# matra

./: Cargo.toml
art/: world.blend  world.blend1
assets/: assets.ron  global.toml  registry.json
assets/levels/: World.glb
assets/materials/: Material.001.glb  Material.002.glb  Material.glb
assets/shaders/: pfx.wgsl
src/: config.rs  lib.rs  main.rs  player.rs  render.rs  utils.rs
src/.shaders/: nishita.wgsl
src/core/: atmosphere.rs  hanabi.rs  mod.rs  noise.rs  physics.rs  system.rs
src/core/atmosphere/: clouds.rs  mod.rs  nishita.rs
src/core/atmosphere/shaders/: nishita.wgsl
src/core/dev/: editor.rs  mod.rs
src/debug/: mod.rs  textures.rs
src/fs/: assets.rs  mod.rs
src/level/: mod.rs  utils.rs
src/level/actors/: camera.rs  lights.rs  mod.rs  player.rs
src/level/particles/: mod.rs  torch.rs
src/pfx/: mod.rs  node.rs  pipeline.rs  settings.rs
