[package]
name = "matra"
version = "0.1.0"
edition = "2024"

[dependencies]
# bevy
bevy = { version = "0.15", features = ["default"] }
blenvy = { git = "https://github.com/ptsd/Blenvy", branch = "blenvy-bevy-0.15" }

# plugins
avian3d = "0.2"
hanabi = { package = "bevy_hanabi", version = "0.14" }
dolly = { package = "bevy_dolly", version = "0.0.5" }
bevy_egui = { version = "0.32", default-features = false }
bevy_spectator = { version = "0.7" }
bevy-tnua = "0.21"
bevy-tnua-avian3d = "0.2"
bevy_atmosphere = "0.12"
bevy-inspector-egui = "0.29"
bevy_asset_loader = "0.22.0"
iyes_progress = "0.13"
bevy_easy_portals = { git = "https://github.com/chompaa/bevy_easy_portals", features = ["gizmos"] }

# higher
egui = "0.30"
egui_dock = "0.15"
serde = { version = "1.0.217", features = ["derive"] }

[patch.crates-io]
transform-gizmo-bevy = { git = "https://github.com/ActuallyHappening/transform-gizmo" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = 'abort'
strip = true
codegen-units = 1
lto = "fat"
